Revert "maybe fix weird virtual keyboard bounce on safari mobile"
This reverts commit dd3cf3f62afd4b61184e11c12bb85edcfb4b73b6.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,8 +1,6 @@
 /* Base */
 
 body {
-    position: absolute;
-    height: 100%;
     margin: 0 auto;
     width: 100%;
     color: white;
@@ -42,7 +40,7 @@ main {
 }
 
 .cmd-clipboard {
-    width: 100% !important;
+    width: 100%!important;
 }
 
 /* General styles */
